# 3D-Asset-Registry-API

./: .gitignore  README.md  alembic.ini  env.example  pyproject.toml  requirements.txt
Reference Documents/: Annex A Resource Definition Framework for 3D Assets.txt  Architecture.txt  RDF.txt
app/: __init__.py  config.py  dependencies.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  assets.py  health.py  router.py  tags.py
app/auth/: __init__.py  dependencies.py  jwt.py  permissions.py
app/core/: __init__.py  exceptions.py  responses.py
app/db/: __init__.py  base.py  session.py
app/models/: __init__.py  asset.py  associations.py  tag.py
app/schemas/: __init__.py  asset.py  error.py  tag.py
app/schemas/jsonld/: __init__.py  context.py  transform.py
app/services/: __init__.py  asset_service.py  metadata_extractor.py  metrics.py  tag_service.py
app/storage/: __init__.py  azure.py  base.py  factory.py  local.py  s3.py
docker/: Dockerfile  docker-compose.local.yml  docker-compose.yml
migrations/: env.py
migrations/versions/: 2026_02_12_0001-001_add_rdf_annex_a_properties.py
tests/: __init__.py  conftest.py
tests/test_api/: test_assets.py  test_health.py  test_tags.py
tests/test_auth/: test_permissions.py
tests/test_storage/: test_backends.py
